# Promise2

./: .gitignore  .travis.yml  DeferredPromiseInternals.h  NestingPromiseInternals.h  Promise.h  PromiseConfig.h  PromiseInternals.h  PromiseInternalsBase.h  PromisePublicAPIs.h  PromisePublicAPIsImpl.h  README.md  ResolvedRejectedPromiseInternals.h  ThreadContext_GCD.cpp  ThreadContext_GCD.h  ThreadContext_STL.cpp  ThreadContext_STL.h  ThreadContext_Windows.cpp  ThreadContext_Windows.h  appveyor.yml  circle.yml  declfn.h
context/: ThreadContext_GCD.h  ThreadContext_STL.h  ThreadContext_Windows.h
doc/: zh-CN.md
impl/: DeferredPromiseInternals.h  NestingPromiseInternals.h  PromiseInternalsBase.h  PromisePublicAPIsImpl.h  RecursionPromiseInternals.h  ResolvedRejectedPromiseInternals.h
impl/value/: GeneralPromiseValue.h  PromiseValueBase.h
public/: PromisePublicAPIs.h
test/: .gitignore  CMakeLists.txt  run_test.sh  test_main.cpp
test/base/: entry.h  promise2_api.cpp
test/base/ocpp_mixing/: CMakeLists.txt  ocpp_mixing.mm
test/base/promise2_api/: CMakeLists.txt  promise2_api.cpp
test/base/promise2_ref_pointer_types/: CMakeLists.txt  common.h  pointer_type_tests.h  ref_type_tests.h  test.cpp
test/base/promise2_ref_pointer_types/promise_test.build/Debug/promise2_ref_pointer_types.build/: dgph  dgph~
test/base/promise2_ref_pointer_types/promise_test.build/Debug/promise2_ref_pointer_types.build/Objects-normal/x86_64/: promise2_ref_pointer_types.LinkFileList  test.d
test/base/recursion_promise_api/: CMakeLists.txt  test.cpp
test/include/: TestSuite.h
trait/: void_traits.h
